--- a/java/pom.xml
+++ b/java/pom.xml
@@ -10,6 +10,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.test.skip>true</maven.test.skip>
     </properties>
     
     <repositories>
@@ -55,6 +56,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.3</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     
